# mango-api

./: '  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  requests.rs  viewer.rs
src/requests/: chapter.rs  cover.rs  manga.rs  mod.rs  query_utils.rs  scanlation_group.rs  tag.rs
tests/: test_viewer.rs
