[package]
name = "mango-api"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/ArnoDarkrose/mango-api.git"
license-file = "LICENSE"
description = "API for the manga reading tool"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_qs = "0.13.0"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }
