[package]
name = "mango-api"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/ArnoDarkrose/mango-api.git"
license-file = "LICENSE"
description = "API for the manga reading tool"

[lib]
doctest = false

[dependencies]
async-stream = "0.3.6"
bon = "3.0.0"
bytes = "1.8.0"
futures = "0.3.31"
kdam = "0.6.0"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
reqwest = { version = "0.12.9", features = ["json"] }
reqwest-middleware = "0.4.0"
reqwest-tracing = "0.5.4"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_qs = "0.13.0"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["fs", "full"] }
tokio-stream = "0.1.16"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
